--- a/sucess.html
+++ b/sucess.html
@@ -44,6 +44,7 @@
                 <ul class="flex menu_list">
                     <li><a href="index.html#hero">Início</a></li>
                     <li><a href="index.html#about">Sobre</a></li>
+                    <li><a href="index.html#projects">Projetos</a></li>
                     <li><a href="index.html#contact">Contato</a></li>
                 </ul>
             </nav>
