🐛 FIX: Correções no CSS e JS

--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
 
 <body>
 
-    <!-- MENU  -->
+    <!-- HEADER  -->
     <header class="flex menu_container">
         <article class="menu_content">
             <div id="titulo">
                 <a href="index.html">Portfólio</a>
             </div>
 
+            <!-- MENU -->
             <nav>
                 <ul class="flex menu_list">
                     <li><a href="#hero">Início</a></li>
@@ -117,13 +118,13 @@
                 <p>Sinta-se à vontade para entrar em contato comigo!</p>
                 <div class="social_container">
                     <a href="#" target="_blank" class="social_icon" aria-label="LinkedIn">
-                        <img src="./assets/img/linkedin.svg" alt="Link para o Linkedin">
+                        <img src="./assets/icons/social/linkedin.svg" alt="Link para o Linkedin">
                     </a>
                     <a href="#" target="_blank" class="social_icon" aria-label="GitHub">
-                        <img src="./assets/img/github.svg" alt="Link para o GitHub">
+                        <img src="./assets/icons/social/github.svg" alt="Link para o GitHub">
                     </a>
                     <a href="#" target="_blank" class="social_icon" aria-label="Instagram">
-                        <img src="./assets/img/instagram.svg" alt="Link para o Instagram">
+                        <img src="./assets/icons/social/instagram.svg" alt="Link para o Instagram">
                     </a>
                 </div>
             </article>
