--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 <body>
 
     <!-- HEADER  -->
-    <header class="flex menu_container">
-        <article class="menu_content">
+    <header class="flex menu-container">
+        <article class="menu-content">
             <div id="titulo">
                 <a href="index.html">Portfólio</a>
             </div>
 
             <!-- MENU -->
             <nav>
-                <ul class="flex menu_list">
+                <ul class="flex menu-list">
                     <li><a href="#hero">Início</a></li>
                     <li><a href="#about">Sobre</a></li>
                     <li><a href="#projects">Projetos</a></li>
@@ -62,39 +62,39 @@
     <main>
 
         <!-- #HERO -->
-        <section id="hero" class="hero_container">
+        <section id="hero" class="hero-container">
 
             <!-- BOAS VINDAS -->
-            <article class="hero_content">
-                <h4>👋 Olá, eu sou Rafael</h4>
-                <h1>Desenvolvedor Full Stack</h1>
+            <article class="hero-content">
+                <h1>👋 Olá, eu sou Rafael</h1>
+                <h2>Desenvolvedor Full Stack</h2>
                 <p>Transformo ideias em código e crio experiências digitais incríveis.</p>
-                <div class="buttons_container">
+                <div class="buttons-container">
                     <a href="#contact" class="botao">Entre em Contato</a>
-                    <a href="#about" class="botao_outline">Saiba Mais...</a>
+                    <a href="#about" class="botao-outline">Saiba Mais...</a>
                 </div>
             </article>
 
-            <!-- IMAGEM COM ANIMAÇÃO -->
-            <figure class="hero_image">
+            <!-- IMAGEM -->
+            <figure class="hero-image">
                 <img src="./assets/img/eu.png" alt="Ilustração com uma pessoa desenvolvedora escrevendo código."
-                    class="float_animation">
+                    class="float-animation">
             </figure>
 
         </section>
 
         <!-- #ABOUT -->
-        <section id="about" class="about_container">
+        <section id="about" class="about-container">
 
         </section>
 
         <!-- #PROJECTS - CARROSSEL SWIPER -->
-        <section id="projects" class="projects_container">
+        <section id="projects" class="projects-container">
             <h2>Meus Projetos</h2>
 
-            <div class="carrosel_container">
+            <div class="carrosel-container">
                 <!-- Swiper Container -->
-                <div class="swiper projectsSwiper">
+                <div class="swiper projects-swiper">
                     <div class="swiper-wrapper">
                         <!-- Os cards serão inseridos aqui dinamicamente -->
                     </div>
@@ -110,20 +110,20 @@
         </section>
 
         <!-- #CONTACT -->
-        <section id="contact" class="contact_container">
+        <section id="contact" class="contact-container">
 
             <!-- REDES SOCIAIS -->
-            <article class="contact_info">
-                <h3>Entre em Contato</h3>
+            <article class="contact-info">
+                <h2>Entre em Contato</h2>
                 <p>Sinta-se à vontade para entrar em contato comigo!</p>
-                <div class="social_container">
-                    <a href="#" target="_blank" class="social_icon" aria-label="LinkedIn">
+                <div class="social-container">
+                    <a href="#" target="_blank" class="social-icon" aria-label="LinkedIn">
                         <img src="./assets/icons/social/linkedin.svg" alt="Link para o Linkedin">
                     </a>
-                    <a href="#" target="_blank" class="social_icon" aria-label="GitHub">
+                    <a href="#" target="_blank" class="social-icon" aria-label="GitHub">
                         <img src="./assets/icons/social/github.svg" alt="Link para o GitHub">
                     </a>
-                    <a href="#" target="_blank" class="social_icon" aria-label="Instagram">
+                    <a href="#" target="_blank" class="social-icon" aria-label="Instagram">
                         <img src="./assets/icons/social/instagram.svg" alt="Link para o Instagram">
                     </a>
                 </div>
@@ -159,7 +159,7 @@
 
     <!-- FOOTER -->
     <footer>
-        Desenvolvido por Rafael Queiróz - 2025
+        Desenvolvido por Rafael Queiróz - 2026
     </footer>
 
     <!-- SWIPER JS -->
