--- a/sucess.html
+++ b/sucess.html
@@ -35,13 +35,13 @@
 
 <body>
     <!-- MENU -->
-    <header class="flex menu_container">
-        <article class="menu_content">
+    <header class="flex menu-container">
+        <article class="menu-content">
             <div id="titulo">
-                <a href="index.html">Portfolio</a>
+                <a href="index.html">Portfólio</a>
             </div>
             <nav>
-                <ul class="flex menu_list">
+                <ul class="flex menu-list">
                     <li><a href="index.html#hero">Início</a></li>
                     <li><a href="index.html#about">Sobre</a></li>
                     <li><a href="index.html#projects">Projetos</a></li>
@@ -53,10 +53,10 @@
 
     <!-- MAIN -->
     <main>
-        <section class="sucess_container">
-            <article class="sucess_content">
+        <section class="sucess-container">
+            <article class="sucess-content">
 
-                <figure class="sucess_icon">
+                <figure class="sucess-icon">
                     <img src="./assets/img/sucess.svg" alt="Ilustração de desenvolvedor trabalhando"
                         class="float-animation">
                 </figure>
@@ -72,7 +72,7 @@
 
     <!-- FOOTER -->
     <footer>
-        Feito com ❤️ por Rafael Queiróz - 2025
+        Feito por Rafael Queiróz - 2026
     </footer>
 
 </body>
